--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Machines", machines_path %></li>
             <li><%= link_to "Tournaments", tournaments_path %></li>
+            <li><%= link_to "Client Bugs", client_bugs_path %></li>
             <li><%= link_to "Jackpot", jackpots_path %></li>
             <li><%= link_to "Api Key", show_api_key_path %></li>
             <li><%= link_to("Logout", destroy_user_session_path, :method => :delete) %></li>
