New sync option for tournaments only

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
-        <a class="navbar-brand" href="/">OET Services</a>
+        <a class="navbar-brand" href="/">Slot Dashboard</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse pull-right">
         </div>
         <% if user_signed_in? %>
