--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -2,11 +2,15 @@
   = form_tag '/utility/delete_data', :method => 'get' do
       .form-group
         - if user_signed_in?
-          button type="submit" Delete Database
+          button type="submit" Flush complete Database
   = form_tag '/utility/sync_data', :method => 'get' do
     .form-group
       - if user_signed_in?
-        button type="submit" Sync Database
-  h1 Hello, team!
+        button type="submit" Sync Complete Database
+  = form_tag '/utility/sync_tournament', :method => 'get' do
+    .form-group
+      - if user_signed_in?
+        button type="submit" Sync Tournament Only
+  h1 Hello, Slot team!
   p Welcome to Slot
   p= link_to "Learn more", "#", class: "btn btn-primary btn-lg"
