Checnges for user log

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
             <li><%= link_to "Client Bugs", client_bugs_path %></li>
             <li><%= link_to "Jackpot", jackpots_path %></li>
             <li><%= link_to "Game Versions", game_versions_path %></li>
+            <li><%= link_to "User Log", user_progresses_path %></li>
             <li><%= link_to "Api Key", show_api_key_path %></li>
             <li><%= link_to("Logout", destroy_user_session_path, :method => :delete) %></li>
           </ul>
