--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
             <li><%= link_to "Jackpot", jackpots_path %></li>
             <li><%= link_to "Game Versions", game_versions_path %></li>
             <li><%= link_to "User Log", user_progresses_path %></li>
+            <li><%= link_to "Players Prize", players_prizes_path %></li>
             <li><%= link_to "Api Key", show_api_key_path %></li>
             <li><%= link_to("Logout", destroy_user_session_path, :method => :delete) %></li>
           </ul>
