--- a/app/views/client_bugs/index.html.slim
+++ b/app/views/client_bugs/index.html.slim
@@ -1,6 +1,7 @@
 - model_class = ClientBug
 div class="page-header"
   h1=t '.title', :default => model_class.model_name.human.pluralize.titleize
+= will_paginate @client_bugs
 table class="table table-striped"
   thead
     tr
