SM-620 new sorted set to minimize tournament sorting in node

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -11,6 +11,10 @@
     .form-group
       - if user_signed_in?
         button type="submit" Sync User Profiles
+  = form_tag '/utility/sync_tournament', :method => 'get' do
+    .form-group
+      - if user_signed_in?
+        button type="submit" Sync tournament only
   = form_tag '/utility/stop_tournament', :method => 'get' do
     .form-group
       - if user_signed_in?
