--- a/app/views/tournaments/index.html.slim
+++ b/app/views/tournaments/index.html.slim
@@ -30,6 +30,7 @@ table class="table table-striped"
           = link_to t('.edit', :default => t("helpers.links.edit")), edit_tournament_path(tournament), :class => 'btn btn-default btn-xs'
           '
           = link_to t('.destroy', :default => t("helpers.links.destroy")), tournament_path(tournament), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
+          = link_to "Kill", kill_tournament_path(tournament), :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-info btn-xs col-md-3'
 
 = link_to t('.new', :default => t("helpers.links.new")), new_tournament_path, :class => 'btn btn-primary'
 
