--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,20 +1,27 @@
 .jumbotron
+  h1 Hello, Slot team!
+  p Welcome to Slot
+
+  = p "These all steps required for a fresh start"
+  hr
+  = form_tag '/utility/save_user_in_db', :method => 'get' do
+    .form-group
+      - if user_signed_in?
+        button type="submit" Save users from Redis to DB
   = form_tag '/utility/delete_data', :method => 'get' do
-      .form-group
-        - if user_signed_in?
-          button type="submit" Flush complete Database
+    .form-group
+      - if user_signed_in?
+        button type="submit" Flush complete Database
   = form_tag '/utility/sync_data', :method => 'get' do
     .form-group
       - if user_signed_in?
         button type="submit" Sync Complete Database
-  = form_tag '/utility/sync_users_profile', :method => 'get' do
-    .form-group
-      - if user_signed_in?
-        button type="submit" Sync User Profiles
   = form_tag '/utility/sync_tournament', :method => 'get' do
     .form-group
       - if user_signed_in?
         button type="submit" Sync tournament only
+  = p "Make below changes only if required"
+  hr
   = form_tag '/utility/stop_tournament', :method => 'get' do
     .form-group
       - if user_signed_in?
@@ -23,6 +30,7 @@
     .form-group
       - if user_signed_in?
         button type="submit" Start tournament
-  h1 Hello, Slot team!
-  p Welcome to Slot
-  p= link_to "Learn more", "#", class: "btn btn-primary btn-lg"
+  = form_tag '/utility/sync_users_profile', :method => 'get' do
+  .form-group
+    - if user_signed_in?
+      button type="submit" Sync User Profiles
